--- a/trailermarine-master (1)/trailermarine-master/pag9.html
+++ b/trailermarine-master (1)/trailermarine-master/pag9.html
@@ -11,31 +11,37 @@
 
 <div class="fundo2">
     <div class="carrinho">
-        <a href="" target="_blank">
+        <a href="https://www.google.com.br/?safe=active&ssui=on" target="_blank">
             <img src="carrinho.png" width="100px">
         </a>
     </div> 
-    <div class="quadradodados">
-        <a>
-            Pagamento efetuado!
+    <div class="perfil">
+        <a href="https://www.google.com.br/?safe=active&ssui=on" target="_blank">
+            <img src="perfil.png" width="100px">
         </a>
-        <div class="botao"> 
-            <a href="" target="_blank">
-                Voltar
-            </a>
-        </div>
-        <div class="botao2"> 
-            <a href="" target="_blank">
-                Ver pedido
-            </a>
-        </div>
-        <div class="botao3"> 
-            <a href="" target="_blank">
-                Suporte
-            </a>
-        </div>
+    </div> 
+</div>    
+<div class="quadradodados">
+    <a>
+        Pagamento efetuado!
+    </a>
+    <div class="botao"> 
+        <a href="https://www.google.com.br/?safe=active&ssui=on" target="_blank">
+            Voltar
+        </a>
+    </div>
+    <div class="botao2"> 
+        <a href="https://www.google.com.br/?safe=active&ssui=on" target="_blank">
+            Ver pedido
+        </a>
+    </div>
+    <div class="botao3"> 
+        <a href="https://www.google.com.br/?safe=active&ssui=on" target="_blank">
+            Suporte
+        </a>
     </div>
 </div>
+
     
 </body>
 </html>
