--- a/trailermarine-master (1)/trailermarine-master/pag9.html
+++ b/trailermarine-master (1)/trailermarine-master/pag9.html
@@ -12,7 +12,7 @@
 <div class="fundo2">
     <div class="carrinho">
         <a href="https://www.google.com.br/?safe=active&ssui=on" target="_blank">
-            <img src="carrinho.png" width="100px">
+            <img src="carrinho.png" width="130px">
         </a>
     </div> 
     <div class="perfil">
@@ -21,8 +21,12 @@
         </a>
     </div> 
 </div> 
-   
+
 <div class="quadradodados">
+    <div class="logo">
+        <img src="logo (1).png" width="400px">
+    </div>
+    <br>
     <a>
         Pagamento efetuado!
     </a>
